New: Add new attribute `showOnlyRules` to only include specific rules

--- a/test/antora/docs/modules/ROOT/pages/index.adoc
+++ b/test/antora/docs/modules/ROOT/pages/index.adoc
@@ -7,3 +7,5 @@ dt::example$smallestDecisionTable.lfet[]
 dt::example$smallestDecisionTableWithActionOcc.lfet[]
 
 lfet::example$smallestDecisionTableWithConditionOcc.lfet[]
+
+lfet::example$smallestDecisionTableWithConditionOcc.lfet[showOnlyRules="1,2"]
